add left nav in devices

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,10 +6,6 @@ body {
     margin-bottom: 50px;
 }
 
-.navbar {
-    margin-bottom: 10px;
-}
-
 @media (min-width: 768px) {
     .search-bar {
         width: 50%;
@@ -23,4 +19,8 @@ body {
 
 .upload_result {
     width: 100%;
+}
+
+.left-nav {
+    padding: 0;
 }
