update upload excel function in devices

--- a/templates/model/list.html.twig
+++ b/templates/model/list.html.twig
@@ -38,15 +38,16 @@
                             class="btn btn-success fileinput-button"
                             multiple="multiple"
                         />
-                    </div>
-                    <div id="progress">
-                        <div class="bar" style="width: 0%;"></div>
+                        <div id="progress">
+                            <div class="bar" style="width: 0%;"></div>
+                        </div>
                     </div>
                     <div class="modal-footer"></div>
                     {{ form_end(form) }}
                 </div>
             </div>
         </div>
+        <!-- end Modal -->
         <div class="row">
             <div class="col-sm">
                 <form method="GET" class="form-inline my-2 my-lg-0 d-block search-bar">
