--- a/templates/nav/racks.html.twig
+++ b/templates/nav/racks.html.twig
@@ -1,7 +1,7 @@
 <ul class="nav flex-column navbar-dark bg-dark">
     {% for rack in racks %}
     <li class="nav-item">
-        <a class="nav-link" href="#{{rack.getId()}}abcd">
+        <a class="nav-link" href="/racks/{{rack.getId()}}/devices">
             {{ rack.getName() }}
         </a>
     </li>
