--- a/templates/device/list.html.twig
+++ b/templates/device/list.html.twig
@@ -2,6 +2,52 @@
 {% block body %}
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
+        <!-- Modal -->
+        <div
+            class="modal fade"
+            id="uploadModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="uploadDeviceTitle"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    {{ form_start(form) }}
+                    <div class="modal-header">
+                        <h5
+                            class="modal-title"
+                            id="uploadModalTitle"
+                        >
+                            Upload Excel
+                        </h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input
+                            type="file"
+                            name="file"
+                            id="devices_excel"
+                            class="btn btn-success fileinput-button"
+                            multiple="multiple"
+                        />
+                        <div id="progress">
+                            <div class="bar" style="width: 0%;"></div>
+                        </div>
+                    </div>
+                    <div class="modal-footer"></div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
+        <!-- end Modal -->
         <div class="row">
             <div class="col-md-auto left-nav" >
                 {{ render(controller('App\\Controller\\NavigatorController::navRacks')) }}
@@ -39,12 +85,6 @@
                     </form>
                 </div>
                 <div class="col-sm mb-3">
-                    <a
-                        class="btn btn-primary float-md-right float-sm-left"
-                        href="{{ path('new_device') }}"
-                    >
-                        New Device
-                    </a>
                     <button
                         type="button"
                         class="btn btn-primary float-md-right float-sm-left"
@@ -53,53 +93,15 @@
                     >
                         Upload Excel
                     </button>
+                    <a
+                        class="btn btn-primary float-md-right float-sm-left"
+                        href="{{ path('new_device') }}"
+                    >
+                        New Device
+                    </a>
                 </div>
             </div>
-            <div
-                class="modal fade"
-                id="uploadModal"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="uploadModalTitle"
-                aria-hidden="true"
-            >
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        {{ form_start(form) }}
-                        <div class="modal-header">
-                            <h5
-                                class="modal-title"
-                                id="uploadModalTitle"
-                            >
-                                Upload Excel
-                            </h5>
-                            <button
-                                type="button"
-                                class="close"
-                                data-dismiss="modal"
-                                aria-label="Close"
-                            >
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            {{ form_widget(form.attachment) }}
-                            <!-- <input type="file" name="device_excel" /> -->
-                        </div>
-                        <div class="modal-footer">
-                            {{ form_widget(form.save, {'attr':{class:'btn btn-primary'}}) }}
-                            <!-- <button
-                                type="submit"
-                                class="btn btn-primary"
-                                id="devices_upload_btn"
-                            >
-                                Upload
-                            </button> -->
-                        </div>
-                        {{ form_end(form) }}
-                    </div>
-                </div>
-            </div>
+
             <div class="table-responsive-md">
                 <table class="table">
                     <thead class="thead-light">
@@ -130,9 +132,9 @@
                             </td>
                             <td> {{ item.getSerialNumber() }} </td>
                             <td> {{ item.getBarcodeNumber() }} </td>
-                            <td> {{ item.getRack() }}</td>
+                            <td> {{ item.getRack().getName() }}</td>
                             <td> {{ item.getUnit() }}</td>
-                            <td> {{ item.getModel().getManufacturer() }} </td>
+                            <td> {{ item.getModel().getManufacturer().getName() }} </td>
                             <td> {{ item.getModel().getModel() }} </td>
                             <td> {{ item.getPo() }} </td>
                             <td> {{ item.getStatus() }} </td>
