--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -8,11 +8,11 @@
             <li class="nav-item {% if navbar == 'home' or navbar == '' %} active {% endif %}">
                 <a class="nav-link" href="/index">Home</a>
             </li>
+            <li class="nav-item {% if navbar == 'receiving' or navbar == '' %} active {% endif %}">
+                <a class="nav-link" href="/receivings">Receiving</a>
+            </li>
             <li class="nav-item {% if navbar == 'bau' %} active {% endif %}">
                 <a class="nav-link" href="/bau">BAU</a>
-            </li>
-            <li class="nav-item {% if navbar == 'task' %} active {% endif %}">
-                <a class="nav-link" href="/tasks">Task</a>
             </li>
             <li class="nav-item {% if navbar == 'device' %} active {% endif %}">
                 <a class="nav-link" href="/devices">Device</a>
