--- a/templates/bau/new.html.twig
+++ b/templates/bau/new.html.twig
@@ -9,6 +9,16 @@
             {{ form_widget(form.chg_number) }}
         </div>
         <div class="form-group">
+            {{ form_label(form.task_array) }}
+            {{ form_errors(form.task_array) }}
+            {{ form_widget(form.task_array) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.inc_array) }}
+            {{ form_errors(form.inc_array) }}
+            {{ form_widget(form.inc_array) }}
+        </div>
+        <div class="form-group">
             {{ form_label(form.type) }}
             {{ form_errors(form.type) }}
             {{ form_widget(form.type) }}
