--- a/templates/receiving/index.html.twig
+++ b/templates/receiving/index.html.twig
@@ -43,84 +43,10 @@
                 </a>
             </div>
         </div>
-        <div class="table-responsive-md">
-            <table class="table">
-                <thead class="thead-light">
-                    <tr>
-                        <th>Planned Date</th>
-                        <th>Type</th>
-                        <th>Detail</th>
-                        <th>Delivery</th>
-                        <th>CT Access</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for receiving in pagination %}
-                    <tr class=
-                            "{% if receiving.getType() == "device_roll_in" %}
-                            table-danger
-                            {% elseif receiving.getType() == "device_roll_out" %}
-                            table-info
-                            {% endif %}"
-                        data-id = "{{ receiving.getId() }}"
-                    >
-                        <td>
-                            <a href="
-                                {{ path(
-                                    'edit_receiving',
-                                    {'receiving': receiving.getId()}
-                                ) }}
-                            ">
-                                {{ receiving.getPlannedDate() | date("m/d/y ") }}
-                            </a>
-                        </td>
-                        <td>
-                            {{ receiving.showTypeInText() }}
-                        </td>
-                        <td> {{ receiving.getDetail() }} </td>
-                        <td> {{ receiving.getDeliveryInfo() }} </td>
-                        <td>
-                            <select class="list_receiving_access">
-                                <option 
-                                    value=1
-                                    {% if receiving.getAccess() %}
-                                        selected = selected
-                                    {% endif %}
-                                >Yes</option>
-                                <option
-                                    value=0
-                                    {% if receiving.getAccess()==false %}
-                                        selected = selected
-                                    {% endif %}
-                                >No</option>
-
-                            </select>
-                        </td>
-                        <td>
-                            <select class="list_receiving_status">
-                                <option
-                                    value="new"
-                                    {% if receiving.getStatus()=="new" %}
-                                        selected = selected
-                                    {% endif %}
-                                >New</option>
-                                <option
-                                    value="done"
-                                    {% if receiving.getStatus()=="done" %}
-                                        selected = selected
-                                    {% endif %}
-                                >Done</option>
-                            </select>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include "receiving/table.html.twig" %}
         {# display navigation #}
         <div class="navigation">
-            {{ knp_pagination_render(pagination) }}
+            {{ knp_pagination_render(receivingPagination) }}
         </div>
     </div>
 {% endblock %}
