--- a/templates/bau/new.html.twig
+++ b/templates/bau/new.html.twig
@@ -3,35 +3,36 @@
     {% include "nav/nav.twig" %}
     <div class="container-fluid">
     {{ form_start(form) }}
-        <div class="form-group">
-            {{ form_label(form.chg_number) }}
-            {{ form_errors(form.chg_number) }}
-            {{ form_widget(form.chg_number) }}
-        </div>
-        <div class="form-group">
-            {{ form_label(form.task_array) }}
-            {{ form_errors(form.task_array) }}
-            {{ form_widget(form.task_array) }}
-        </div>
-        <div class="form-group">
-            {{ form_label(form.inc_array) }}
-            {{ form_errors(form.inc_array) }}
-            {{ form_widget(form.inc_array) }}
-        </div>
-        <div class="form-group">
-            {{ form_label(form.type) }}
-            {{ form_errors(form.type) }}
-            {{ form_widget(form.type) }}
-        </div>
+
         <div class="form-group">
             {{ form_label(form.start_time) }}
             {{ form_errors(form.start_time) }}
-            {{ form_widget(form.start_time) }}
+            {{ form_widget(form.start_time, {'attr': {class: 'datetimepicker form-control'}}) }}
         </div>
         <div class="form-group">
             {{ form_label(form.end_time) }}
             {{ form_errors(form.end_time) }}
-            {{ form_widget(form.end_time) }}
+            {{ form_widget(form.end_time, {'attr': {class: 'datetimepicker form-control'}}) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.chg_number) }}
+            {{ form_errors(form.chg_number) }}
+            {{ form_widget(form.chg_number, {'attr': {class: 'form-control'} }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.task_array) }}
+            {{ form_errors(form.task_array) }}
+            {{ form_widget(form.task_array, {'attr': {class: 'form-control'} }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.inc_array) }}
+            {{ form_errors(form.inc_array) }}
+            {{ form_widget(form.inc_array, {'attr': {class: 'form-control'} }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.type) }}
+            {{ form_errors(form.type) }}
+            {{ form_widget(form.type, {'attr': {class: 'form-control'} }) }}
         </div>
         <div class="form-group">
             {{ form_label(form.description) }}
