add rack style in the devices list by rack

--- a/templates/nav/nav.twig
+++ b/templates/nav/nav.twig
@@ -18,6 +18,9 @@
             <li class="nav-item {% if navbar == 'device' %} active {% endif %}">
                 <a class="nav-link" href="/devices">Device</a>
             </li>
+            <li class="nav-item {% if navbar == 'rack' %} active {% endif %}">
+                <a class="nav-link" href="/racks/1/devices">Rack</a>
+            </li>
             <li class="nav-item {% if navbar == 'parts' %} active {% endif %}">
                 <a class="nav-link" href="/parts">Spare</a>
             </li>
