--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -34,3 +34,28 @@
 .bau-time-td {
     width: 190px;
 }
+
+.rack {
+    border: 1px solid black;
+    width: 300px;
+    margin: 0 auto;
+}
+
+.rack .rack-header {
+    text-align: center;
+    border: 1px solid black;
+    background-color: #007bff;
+    color: #FFFFFF;
+}
+
+.rack .rack-unit {
+    font-size: 10px;
+    line-height: 10px;
+    vertical-align: middle;
+}
+
+.rack td {
+    border: 1px solid;
+    padding: 0;
+    text-align: center;
+}
